fixes on ie

--- a/src/frontend/styles/_shared/_mobile.styl
+++ b/src/frontend/styles/_shared/_mobile.styl
@@ -510,7 +510,7 @@ body
         bottom: 10px
         right: 67px
       .cover 
-        height: 184px
+        height: 230px
         .name, .type, .genres, .socials_room
           margin-left: MARGIN_LEFT
         .upload_element
@@ -541,6 +541,7 @@ body
         display: none
       .big_number span.number
         font-size: 1rem
+      
         
       .profile_content
         display: block
