--- a/src/frontend/styles/pages/room.styl
+++ b/src/frontend/styles/pages/room.styl
@@ -583,3 +583,11 @@
 .room_recording
   .appcast_running_message select
     display: none
+    
+// .explorer
+//   .profile_content.chat
+//     display: block
+
+.explorer.player_visible
+  .profile_content.chat
+    padding-bottom: 70px
